# lbm-fluid-sim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: block.yaml  boltzmann.yaml  boltzmann_2.yaml  cavern.yaml  chamber.yaml  nozzle.yaml
include/: d2q9.h  d2q9_observables.h  d2q9_setup.h  lbm.h  renderer.h  shaders.h  simulation_setup.h  tracers_collection.h
scripts/: prepare_simulation.py
src/: d2q9.cpp  d2q9_observables.cpp  d2q9_setup.cpp  main.cpp  renderer.cpp  simulation_setup.cpp  tracers_collection.cpp
